src/main/java/com/example/DiplomaSite/error/DefenseResultDeletionException.java
package com.example.DiplomaSite.error;

public class DefenseResultDeletionException extends RuntimeException{
    public DefenseResultDeletionException(String message, Throwable cause) {
        super(message, cause);
    }
}
